--- a/index.html
+++ b/index.html
@@ -31,44 +31,33 @@
         p {
             margin-bottom: 20px;
         }
+
+        button {
+            padding: 10px;
+            font-size: 16px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <h1>Plant Information</h1>
     <input type="text" id="searchInput" placeholder="Type a plant name">
+    <button onclick="search()">Search</button>
     <div id="resultContainer"></div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const searchInput = document.getElementById('searchInput');
             const resultContainer = document.getElementById('resultContainer');
+            const searchButton = document.querySelector('button');
 
-            searchInput.addEventListener('input', function () {
+            let recentSearches = [];
+
+            searchButton.addEventListener('click', function () {
                 const query = searchInput.value.toLowerCase();
                 displayPlantInfo(query);
+                saveRecentSearch(query);
             });
-
-            const plantDatabase = {
-                plant51: {
-                    origin: 'Tropical regions',
-                    consumption: 'Edible fruit, Medicinal',
-                    information: 'Bananas are a rich source of potassium and are widely consumed worldwide. They are botanically classified as berries.',
-                    funFact: 'The banana plant is not a tree but a large herbaceous plant.',
-                },
-                plant52: {
-                    origin: 'South America',
-                    consumption: 'Edible seeds, Oil production',
-                    information: 'Soybeans are a versatile legume used in various food products, including tofu and soy milk. They are also a key ingredient in the production of soybean oil.',
-                    funFact: 'Soybeans belong to the pea family and are an excellent source of protein.',
-                },
-                // Add more plants...
-                plant100: {
-                    origin: 'Australia',
-                    consumption: 'Edible fruit, Medicinal',
-                    information: 'Kangaroo paw is a unique flowering plant with vibrant, tubular flowers. It is native to Australia and is popular in gardens for its distinctive appearance.',
-                    funFact: 'The flowers of the kangaroo paw plant resemble a kangaroo\'s paw, hence the name.',
-                },
-            };
 
             function displayPlantInfo(query) {
                 resultContainer.innerHTML = '';
@@ -95,7 +84,47 @@
                     resultContainer.appendChild(notFoundMessage);
                 }
             }
+
+            function saveRecentSearch(query) {
+                if (query.trim() === '') {
+                    return; // If the search input is empty, do nothing
+                }
+
+                // Add the query to recent searches
+                recentSearches.push(query);
+
+                // Limit recent searches to the last 5
+                if (recentSearches.length > 5) {
+                    recentSearches.shift();
+                }
+
+                // Update the search input placeholder with recent searches
+                searchInput.placeholder = `Recent searches: ${recentSearches.join(', ')}`;
+            }
         });
+
+        const plantDatabase = {
+            // Fill out the information for 100 plants...
+            plant1: {
+                origin: 'Tropical regions',
+                consumption: 'Edible fruit, Medicinal',
+                information: 'Bananas are a rich source of potassium and are widely consumed worldwide. They are botanically classified as berries.',
+                funFact: 'The banana plant is not a tree but a large herbaceous plant.',
+            },
+            plant2: {
+                origin: 'South America',
+                consumption: 'Edible seeds, Oil production',
+                information: 'Soybeans are a versatile legume used in various food products, including tofu and soy milk. They are also a key ingredient in the production of soybean oil.',
+                funFact: 'Soybeans belong to the pea family and are an excellent source of protein.',
+            },
+            // ... (up to plant100)
+            plant100: {
+                origin: 'Australia',
+                consumption: 'Edible fruit, Medicinal',
+                information: 'Kangaroo paw is a unique flowering plant with vibrant, tubular flowers. It is native to Australia and is popular in gardens for its distinctive appearance.',
+                funFact: 'The flowers of the kangaroo paw plant resemble a kangaroo\'s paw, hence the name.',
+            },
+        };
     </script>
 </body>
 </html>
